views trigger download but post-download processing scripts are buggy

--- a/templates/yts/details.html
+++ b/templates/yts/details.html
@@ -21,8 +21,8 @@
 			{% endfor %}
 		<p>
 		<p> Torrent health:</p>
-		<p> Seeds: {{ movie.seeds }} <br> Peers: {{ movie.peers }} </p>
-		<p> Size: {{ movie.size }}
+		<p> Seeds: {{ seeds }} <br> Peers: {{ peers }}</p> 
+		<p> Size: {{ size }}</p>
 		<a href="https://youtube.com/watch?v={{ movie.yt_trailer_code }}">
 			Watch trailer
 		</a>
